--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "client": "npm --prefix ./client run start",
+    "server": "nodemon index",
+    "dev": "concurrently --kill-others \"npm run client\" \"npm run server\" "
   },
   "keywords": [],
   "author": "",
@@ -14,6 +17,7 @@
     "aws-sdk": "^2.724.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "concurrently": "^5.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.17.1",
