--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon index.js",
     "client": "npm --prefix ./client run start",
     "server": "nodemon index",
-    "dev": "concurrently --kill-others \"npm run client\" \"npm run server\" "
+    "dev": "concurrently --kill-others \"npm run client\" \"npm run server\" ",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
